Complete Project commit

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img class="nav-logo" src="./images/logo.svg" alt="" />
             <div class="main-nav-wrapper">
               <div class="nav-list">
-                <ul>
+                <ul class="nav-list-items">
                   <li class="nav-list-item mobile-list-item">About</li>
                   <li class="nav-list-item mobile-list-item">Careers</li>
                   <li class="nav-list-item mobile-list-item">Events</li>
@@ -181,11 +181,11 @@
             </div>
             <div class="nav-list-footer">
               <ul>
-                <a href="" class="nav-list-item"> <li>About</li></a>
-                <a href="" class="nav-list-item"> <li>Careers</li></a>
-                <a href="" class="nav-list-item"> <li>Events</li></a>
-                <a href="" class="nav-list-item"> <li>Products</li></a>
-                <a href="" class="nav-list-item"> <li>Support</li></a>
+                <a href="#" class="nav-list-item"> <li>About</li></a>
+                <a href="#" class="nav-list-item"> <li>Careers</li></a>
+                <a href="#" class="nav-list-item"> <li>Events</li></a>
+                <a href="#" class="nav-list-item"> <li>Products</li></a>
+                <a href="#" class="nav-list-item"> <li>Support</li></a>
               </ul>
             </div>
           </div>
