--- a/index.html
+++ b/index.html
@@ -158,11 +158,21 @@
             </div>
             <div class="nav-list-footer">
               <ul>
-                <a href="#" class="nav-list-item"> <li>About</li></a>
-                <a href="#" class="nav-list-item"> <li>Careers</li></a>
-                <a href="#" class="nav-list-item"> <li>Events</li></a>
-                <a href="#" class="nav-list-item"> <li>Products</li></a>
-                <a href="#" class="nav-list-item"> <li>Support</li></a>
+                <li class="nav-list-item">
+                  <a href="#" class="nav-list-item">About</a>
+                </li>
+                <li class="nav-list-item">
+                  <a href="#" class="nav-list-item">Carriers</a>
+                </li>
+                <li class="nav-list-item">
+                  <a href="#" class="nav-list-item">Events</a>
+                </li>
+                <li class="nav-list-item">
+                  <a href="#" class="nav-list-item">Products</a>
+                </li>
+                <li class="nav-list-item">
+                  <a href="#" class="nav-list-item">Support</a>
+                </li>
               </ul>
             </div>
           </div>
