--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="section-hero">
         <div class="container">
           <nav class="base-nav">
-            <img class="nav-logo" src="./images/logo.svg" alt="" />
+            <img class="nav-logo" src="./images/logo.svg" alt="logo" />
             <div class="main-nav-wrapper">
               <div class="nav-list">
                 <ul class="nav-list-items">
@@ -33,8 +33,12 @@
               </div>
             </div>
 
-            <img class="hamber-icon" src="./images/icon-hamburger.svg" alt="" />
-            <img class="close-icon" src="./images/icon-close.svg" alt="" />
+            <img
+              class="hamber-icon"
+              src="./images/icon-hamburger.svg"
+              alt="icon"
+            />
+            <img class="close-icon" src="./images/icon-close.svg" alt="icon" />
           </nav>
 
           <div class="hero-heading-box">
@@ -52,7 +56,10 @@
       <div class="section-leader">
         <div class="container grid grid-2-cols leader-mobile">
           <div class="leader-img-box">
-            <img src="./images/desktop/image-interactive.jpg" alt="" />
+            <img
+              src="./images/desktop/image-interactive.jpg"
+              alt="leader-img"
+            />
           </div>
 
           <div class="leader-text">
@@ -154,7 +161,7 @@
         <div class="container grid grid-2-cols footer-mobile">
           <div class="footer-left">
             <div class="footer-logo">
-              <img src="./images/logo.svg" alt="" />
+              <img src="./images/logo.svg" alt="logo" />
             </div>
             <div class="nav-list-footer">
               <ul>
